--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -28,7 +28,8 @@
     # modules, e.g.
     #LogLevel info ssl:warn
 
-    ErrorLog /dev/stdout
+    # ErrorLog /dev/stdout
+    ErrorLog /var/log/error.log
     CustomLog /dev/stdout combined
 
     # For most configuration files from conf-available/, which are
